--- a/OctoPodium/CustomViews/GithubLoadingView.xib
+++ b/OctoPodium/CustomViews/GithubLoadingView.xib
@@ -5,7 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GithubLoadingView" customModule="GitHubAwards" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GithubLoadingView" customModule="OctoPodium" customModuleProvider="target">
             <connections>
                 <outlet property="loadingIndicatorImageView" destination="6ZZ-yB-lKC" id="BDh-Dg-tvb"/>
                 <outlet property="staticImage" destination="6I0-Fb-Hv2" id="cMN-qO-zKX"/>
