--- a/OctoPodium/Base.lproj/Main.storyboard
+++ b/OctoPodium/Base.lproj/Main.storyboard
@@ -1237,11 +1237,11 @@
             </objects>
             <point key="canvasLocation" x="2734" y="193"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Trending-->
         <scene sceneID="QP4-O6-IAg">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YZv-cR-8KO" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" systemItem="favorites" id="aUo-Xm-27F"/>
+                    <tabBarItem key="tabBarItem" title="Trending" image="Star" id="aUo-Xm-27F"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="xqw-3a-BWz">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
